# aionbot

./: .cspell.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: as-ref-router.md  change-logger-level.md  command-alias.md  config.json  error-router.md  event-as-any.md  export-in-aionbot.md  fix-fmt.md  fix-router.md  optimze-export.md  readme.md  routers.md
.github/workflows/: build-and-test.yaml  covector-version-or-publish.yml  lint-pr-title.yaml  lint.yaml
crates/aionbot/: CHANGELOG.md  Cargo.toml
crates/aionbot-adapter-onebot/: Cargo.toml
crates/aionbot-adapter-onebot/src/: bot.rs  event.rs  lib.rs  models.rs  ws.rs
crates/aionbot-core/: CHANGELOG.md  Cargo.toml
crates/aionbot-core/src/: core.rs  entry.rs  event.rs  handler.rs  lib.rs  plugin.rs  prelude.rs  queue.rs  router.rs  runtime.rs  types.rs
crates/aionbot-core/src/router/: command.rs  error.rs  logic.rs  matcher.rs
crates/aionbot-macros/: CHANGELOG.md  Cargo.toml
crates/aionbot-macros/src/: lib.rs
crates/aionbot-macros/tests/: macros.rs
crates/aionbot/src/: lib.rs  logger.rs  main.rs  prelude.rs
