[package]
name = "aionbot-adapter-onebot"
version = "0.1.0"
edition = "2021"

[dependencies]
aionbot-core = { version = "0.1.0", path = "../aionbot-core" }
anyhow = "1.0.89"
futures-util = "0.3.30"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-tungstenite = "0.24.0"
