[package]
name = "aionbot-adapter-onebot"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aionbot-core = { version = "*", path = "../aionbot-core" }
anyhow = "1.0.89"
futures-util = "0.3.30"
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = ["sync"] }
tokio-tungstenite = "0.24.0"
