[package]
name = "aionbot-core"
version = "0.1.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.89"
futures = "0.3.30"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.10.6"
serde_json = "1.0.128"
state = "0.6.0"
tokio = { version = "1.40.0", features = ["rt"] }
