[package]
name = "aionbot-macros"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

[dev-dependencies]
aionbot-core.workspace = true

[lib]
proc-macro = true
