[package]
name = "aionbot"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
aionbot-adapter-onebot = { version = "*", path = "../aionbot-adapter-onebot" }
aionbot-core = { version = "*", path = "../aionbot-core" }
aionbot-macros = { version = "*", path = "../aionbot-macros" }
anyhow = "1.0.91"
colored = "2.1.0"
fern = "0.7.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
