[package]
name = "aionbot"
version = "0.1.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aionbot-core.workspace = true
aionbot-macros.workspace = true
anyhow = "1.0.91"
colored = "2.1.0"
fern = "0.7.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
